1998-12-05  Alex Zepeda  <garbanzo@hooked.net>

	* autmoc: Moved to admin/
	* Makefile.cvs: Copied over from kdenetwork verbatim.
	* README: Updated to "require" Qt 1.41.