@@ -13,7 +13,7 @@ installed.  If this variable is not set, strange things may happen.
 Please set this in your login file.
 
 If configure claims Qt cannot be found, have a look at http://www.troll.no
-to get a copy of Qt, version 1.41 or newer.
+to get a copy of Qt, version 1.42 or newer.
 
 Debugging
 ---------
