@@ -1,3 +1,10 @@
+1999-02-17  David Faure  <faure@kde.org>
+
+	* Added call to AC_CHECK_RANDOM, and converted all apps to use
+	random() and srandom() (and to avoid RAND_MAX).
+	If random() is not defined, acconfig.h defines the header for the
+	fake functions in kdecore.
+
 1998-12-05  Alex Zepeda  <garbanzo@hooked.net>
 
 	* autmoc: Moved to admin/
